--- a/paginas/excursiones.html
+++ b/paginas/excursiones.html
@@ -16,7 +16,10 @@
     <header>
         <div class="cabecera">
             <img src="../img/logos/logo-pagina.jpg" alt="logo-mundopesca">
-            <h1>MundoPesca</h1>
+            <div class="tituloMarea">
+                <h1 class="tituloA">MundoPesca</h1>
+                <h1 class="tituloB">MundoPesca</h1>
+            </div>
         </div>
         <nav>
             <ul>
