--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pirata+One&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./style.css/flex-estilo.css">
     <title>MundoPesca</title>
 </head>
@@ -20,61 +22,73 @@
                 <h1 class="tituloA">MundoPesca</h1>
                 <h1 class="tituloB">MundoPesca</h1>
             </div>
-
         </div>
-        <nav>
-            <ul>
-                <li><a href="#" class="navegador">Home</a></li>
-                <li><a href="./paginas/quienes-somos.html" class="navegador">Quienes somos</a></li>
-                <li><a href="./paginas/tiendas.html" class="navegador">Tienda</a></li>
-                <li><a href="./paginas/excursiones.html" class="navegador">Excursiones</a></li>
-                <li><a href="./paginas/contacto.html" class="navegador">Contacto</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./paginas/quienes-somos.html">Quienes somos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./paginas/tiendas.html">Tienda</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./paginas/excursiones.html">Excursiones</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./paginas/contacto.html">Contacto</a>
+                  </li> 
+                </ul>
+              </div>
+            </div>
         </nav>
     </header>
+
     <main class="grid-hindex-main">
         <section class="presentacion">
             <h2>Amamos lo que hacemos</h2>
-            <p>Mas de 20 años de trayectoria nos avalan. Sea en río o en mar, garantizamos la mejor experiencia. Porque es eso, una experiencia unica e inigualable; ya sea por deporte o por recreacion, encontramos ese momento de satisfaccion y paz.</p>
-            <p>Servicios de guía, traslado y equipos. de costa o embarcado.</p>
+            <p>Mas de 20 años de trayectoria nos avalan. Sea en río o en mar, garantizamos la mejor experiencia. Porque es eso, una experiencia unica e inigualable; ya sea por deporte o por recreacion, encontramos ese momento de satisfaccion y paz.<br>
+            Servicios de guía, traslado y equipos. de costa o embarcado.</p>
         </section>
-
-        <section class="nuestra-pesca">
-            <div class="nuestra-pesca__salida">
-                <h3> Ultima salida desde Mardel</h3>
-                <img src="./img/pesca-embarcado.png" alt="pesca embarcado">
+        <div class="container-fluid">
+            <div class="row">
+              <div class="row row-cols-2">
+                <div class="nuestra-pesca__salida">
+                    <h3> Ultima salida desde Mardel</h3>
+                    <img src="./img/pesca-embarcado.png" alt="pesca embarcado">
+                </div>
+                <div class="nuestra-pesca__salida">
+                    <h3> De costa, Monte Hermoso</h3>
+                    <img src="./img/pesca-costa.jpg" alt="pesca de costa">
+                </div>
+              </div>
             </div>
-            <div class="nuestra-pesca__salida">
-                <h3> De costa, Monte Hermoso</h3>
-                <img src="./img/pesca-costa.jpg" alt="pesca de costa">
-            </div>
-        </section>
-
+          </div>
         <section class="normas">
             <div>
                 <h4>Conciencia y Respeto</h4>
                 <p>
-                    Fomentemos la pesca responsable,el cuidado de las especies y la higiene de espacios publico.
-                </p>
-                <p>
-                    Deberán ordenarse las pesquerías con el fin de asegurar que la pesca y la elaboración de pescado se realicen de forma que se reduzcan al mínimo los efectos negativos sobre el medio ambiente, disminuyan los desperdicios y se mantenga la calidad del pescado.
-                    capturado.
+                    Fomentemos la pesca responsable,el cuidado de las especies y la higiene de espacios publico.<br>
+                    Deberán ordenarse las pesquerías con el fin de asegurar que la pesca y la elaboración de pescado se realicen de forma que se reduzcan al mínimo los efectos negativos sobre el medio ambiente, disminuyan los desperdicios y se mantenga la calidad del pescado capturado.
                 </p>
             </div>
             <a href="https://www.fao.org/3/x9066s/x9066s01.htm#:~:text=El%20C%C3%B3digo%20de%20Conducta%20insiste,recursos%20%C3%ADcticos%20y%20su%20h%C3%A1bitat." target="_blank">Ley FAO
             </a>
         </section>
-
         <section class="permisos">
             <div class="permisos__solicitud">
                 <a href="https://www.gba.gob.ar/desarrollo_agrario/pesca/solicitudes" target="_blank">Licencia</a>
-
                 <a href="https://www.argentina.gob.ar/inidep/areas-de-veda" target="_blank">Veda</a>
             </div>
-
             <iframe src="https://www.youtube.com/embed/hfkhrzGPeJo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
-
         <section class="capturas">
             <h3>Las mejores capturas del pais</h3>
             <div class="capturas__img">
@@ -84,25 +98,30 @@
                 <div class="imagen4"><img src="./img/ejemplares/ejemplar-pacu.jpg" alt="mejor-Pacu"></div>
             </div>
         </section>
-
     </main>
     <footer>
-        <ul>
-            <li>
-                <a href="https://www.facebook.com" target="_blank"><img src="./img/logos/logo-facebook.png" alt="logo-facebook" class="logo-redes"></a>
-            </li>
-            <li>
-                <a href="https://www.instagram.com" target="_blank"><img src="./img/logos/logo-instagram.png" alt="logo-instagram" class="logo-redes"></a>
-            </li>
-            <li>
-                <a href="https://www.twitter.com" target="_blank"><img src="./img/logos/logo-twitter.png" alt="logo-twitter" class="logo-redes"></a>
-            </li>
-            <li>
-                <a href="https://www.whatsapp.com" target="_blank"><img src="./img/logos/logo-whatsapp.png" alt="logo-whatsapp" class="logo-redes"></a>
-            </li>
-        </ul>
-        <h5>Copyright 2001-2022. MundoPesca todos los derechos reservados.</h5>
+        <div>
+            <ul>
+                <li>
+                    <a href="https://www.facebook.com" target="_blank"><i class="bi bi-facebook"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com" target="_blank"><i class="bi bi-instagram"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.twitter.com" target="_blank"><i class="bi bi-twitter"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.whatsapp.com" target="_blank"><i class="bi bi-whatsapp"></i></a>
+                </li>
+            </ul>
+        </div>
+        <h5>
+            <i class="bi bi-c-circle"></i> <span>2001-2022</span> <span class="copy">MundoPesca.</span>
+        </h5>
     </footer>
-</body>
 
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+</body>
 </html>
