--- a/paginas/excursiones.html
+++ b/paginas/excursiones.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pirata+One&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../style.css/flex-estilo.css">
     <title>Excursiones</title>
 </head>
@@ -15,21 +17,40 @@
 <body>
     <header>
         <div class="cabecera">
-            <img src="../img/logos/logo-pagina.jpg" alt="logo-mundopesca">
+            <div>
+                <img src="../img/logos/logo-pagina.jpg" alt="logo-mundopesca">
+            </div>
             <div class="tituloMarea">
                 <h1 class="tituloA">MundoPesca</h1>
                 <h1 class="tituloB">MundoPesca</h1>
             </div>
         </div>
-        <nav>
-            <ul>
-                <li><a href="../index.html" class="navegador">Home</a></li>
-                <li><a href="./quienes-somos.html" class="navegador">Quienes somos</a></li>
-                <li><a href="./tiendas.html" class="navegador">Tienda</a></li>
-                <li><a href="./excursiones.html" class="navegador">Excursiones</a></li>
-                <li><a href="./contacto.html" class="navegador">Contacto</a></li>
-            </ul>
-        </nav>
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="../index.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="quienes-somos.html">Quienes somos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="tiendas.html">Tienda</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Excursiones</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="contacto.html">Contacto</a>
+                  </li> 
+                </ul>
+              </div>
+            </div>
+          </nav>
     </header>
     <main >
         <div class="locaciones">
@@ -103,22 +124,28 @@
         </section>
     </main>
     <footer>
-        <ul>
-            <li>
-                <a href="https://www.facebook.com" target="_blank"><img src="../img/logos/logo-facebook.png" alt="logo-facebook" class="logo-redes"></a>
-            </li>
-            <li>
-                <a href="https://www.instagram.com" target="_blank"><img src="../img/logos/logo-instagram.png" alt="logo-instagram" class="logo-redes"></a>
-            </li>
-            <li>
-                <a href="https://www.twitter.com" target="_blank"><img src="../img/logos/logo-twitter.png" alt="logo-twitter" class="logo-redes"></a>
-            </li>
-            <li>
-                <a href="https://www.whatsapp.com" target="_blank"><img src="../img/logos/logo-whatsapp.png" alt="logo-whatsapp" class="logo-redes"></a>
-            </li>
-        </ul>
-        <h5>Copyright 2001-2022 MundoPesca todos los derechos reservados.</h5>
+        <div>
+            <ul>
+                <li>
+                    <a href="https://www.facebook.com" target="_blank"><i class="bi bi-facebook"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com" target="_blank"><i class="bi bi-instagram"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.twitter.com" target="_blank"><i class="bi bi-twitter"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.whatsapp.com" target="_blank"><i class="bi bi-whatsapp"></i></a>
+                </li>
+            </ul>
+        </div>
+        <h5>
+            <i class="bi bi-c-circle"></i> <span>2001-2022</span> <span class="copy">MundoPesca.</span>
+        </h5>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>   
 </body>
 
 </html>
