--- a/paginas/tiendas.html
+++ b/paginas/tiendas.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pirata+One&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../style.css/flex-estilo.css">
     <title>MundoPesca</title>
 </head>
@@ -21,15 +23,32 @@
                 <h1 class="tituloB">MundoPesca</h1>
             </div>
         </div>
-        <nav>
-            <ul>
-                <li><a href="../index.html" class="navegador">Home</a></li>
-                <li><a href="./quienes-somos.html" class="navegador">Quienes somos</a></li>
-                <li><a href="./tiendas.html" class="navegador">Tienda</a></li>
-                <li><a href="./excursiones.html" class="navegador">Excursiones</a></li>
-                <li><a href="./contacto.html" class="navegador">Contacto</a></li>
-            </ul>
-        </nav>
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="../index.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="quienes-somos.html">Quienes somos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Tienda</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="excursiones.html">Excursiones</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="contacto.html">Contacto</a>
+                  </li> 
+                </ul>
+              </div>
+            </div>
+          </nav>
     </header>
     <main class="main-grid-tienda">
         <section class="equipo">
@@ -37,13 +56,13 @@
             <div class="equipo__lista">
                 <ul>
                     <li>
-                        <button><a href="#reel">Reel</a></button>
+                        <a href="#reel">Reel</a>
                     </li>
                     <li>
-                        <button><a href="#cañas">Cañas</a></button>
+                        <a href="#cañas">Cañas</a>
                     </li>
                     <li>
-                        <button><a href="#vestimenta">Indumentaria</a></button>
+                        <a href="#vestimenta">Indumentaria</a>
                     </li>
                 </ul>
             </div>
@@ -51,59 +70,147 @@
         <section class="secciones">
             <div class="secciones__producto">
                 <h3 id="reel">REELS</h3>
-                <div>
-                    <img src="../img/tienda/ShimanoSedonaC3000DH.jpg" alt="Reel Frontal Shimano Sedona C3000DH Spinnin Pejerrey">
-                    <img src="../img/tienda/FrontalShimanoSienna2500.jpg" alt="Reel Frontal Shimano Sienna 2500">
-                    <img src="../img/tienda/ReelRotativoShimanoCaius151.jpg" alt="Reel Rotativo Huevito Shimano Caius 151 HG Izquierdo">
-                    <img src="../img/tienda/PennSlammer.jpg" alt="Caña Penn Slammer">
+                <div class="tarjetas-reel">
+                    <div class="card" style="width: 18rem;">
+                        <img src="../img/tienda/ShimanoSedonaC3000DH.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Card title</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                    <div class="card" style="width: 18rem;">
+                        <img src="../img/tienda/FrontalShimanoSienna2500.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Reel ShimanoSienna</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                    <div class="card" style="width: 18rem;">
+                        <img src="../img/tienda/ReelRotativoShimanoCaius151.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Card title</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                    <div class="card" style="width: 18rem;">
+                        <img src="../img/tienda/PennSlammer.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Card title</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="secciones__producto">
-                <h3 id="cañas">CAÑAS</h3>
-                <div>
-                    <img src="../img/tienda/CañaShimanoFxs50.jpg" alt="Caña Shimano Spinning Ultra Liviano Fxs50">
-                    <img src="../img/tienda/CañaShimanoSpinningFws100.jpg" alt="Caña Shimano Spinning Fws100">
-                    <img src="../img/tienda/CañaBaitcastF150pro.jpg" alt="Caña Baitcast F150pro">
-                    <img src="../img/tienda/cañaFeederPeje.jpg" alt="Caña Feeder Pejerrey">
+                <h3 id="reel">REELS</h3>
+                <div class="tarjetas-reel">
+                    <div class="card" style="width: 18rem;">
+                        <img src="../img/tienda/CañaShimanoFxs50.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Card title</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                    <div class="card" style="width: 18rem;">
+                        <img src="../img/tienda/CañaShimanoSpinningFws100.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Reel ShimanoSienna</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                    <div class="card" style="width: 18rem;">
+                        <img src="../img/tienda/CañaBaitcastF150pro.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Card title</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                    <div class="card" style="width: 18rem;">
+                        <img src="../img/tienda/cañaFeederPeje.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Card title</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="secciones__producto">
-                <h3 id="vestimenta">INDUMENTARIA</h3>
-                <div>
-                    <img src="../img/tienda/conjuntoMosca.jpg" alt="conjunto pesca con Mosca">
-                    <img src="../img/tienda/camisetaNegraLurestar-ml.jpg" alt="camiseta Negra Lurestar ml">
-                    <img src="../img/tienda/conjuntoFinsinpleeOtoñoPrimavera.jpg" alt="conjunto primav-otoño Finsinplee">
-                    <img src="../img/tienda/conjuntoFinsinpleeOtoñoPrimavera.jpg" alt="conjunto primav-otoño Finsinplee">
+                <h3 id="reel">REELS</h3>
+                <div class="tarjetas-reel">
+                    <div class="card" style="width: 18rem;">
+                        <img src="../img/tienda/conjuntoMosca.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Card title</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                    <div class="card" style="width: 18rem;">
+                        <img src="../img/tienda/camisetaNegraLurestar-ml.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Reel ShimanoSienna</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                    <div class="card" style="width: 18rem;">
+                        <img src="../img/tienda/conjuntoFinsinpleeOtoñoPrimavera.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Card title</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                    <div class="card" style="width: 18rem;">
+                        <img src="../img/tienda/conjuntoFinsinpleeOtoñoPrimavera.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Card title</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
                 </div>
             </div>
+
         </section>
         <section class="cursos">
-            <h3>Cursos</h3>
+            <h4>Cursos</h4>
             <p>
-                Brindamos cursos de <span>Carnada</span>, armado de <span>lineas</span> y <span>navegacion + sonar.</span> </p>
-            <p>
-                Para costos, podes pasar por nuestro <a href="./quienes-somos.html">local</a> o consultanos en <a href="./contacto.html">aquí</a>
+                Brindamos cursos de <span>Carnada</span>, armado de <span>lineas</span> y <span>navegacion + sonar.</span><br>Para costos, podes pasar por nuestro <a href="./quienes-somos.html">local</a> o consultanos en <a href="./contacto.html">aquí</a>
             </p>
         </section>
     </main>
     <footer>
-        <ul>
-            <li>
-                <a href="https://www.facebook.com" target="_blank"><img src="../img/logos/logo-facebook.png" alt="logo-facebook" class="logo-redes"></a>
-            </li>
-            <li>
-                <a href="https://www.instagram.com" target="_blank"><img src="../img/logos/logo-instagram.png" alt="logo-instagram" class="logo-redes"></a>
-            </li>
-            <li>
-                <a href="https://www.twitter.com" target="_blank"><img src="../img/logos/logo-twitter.png" alt="logo-twitter" class="logo-redes"></a>
-            </li>
-            <li>
-                <a href="https://www.whatsapp.com" target="_blank"><img src="../img/logos/logo-whatsapp.png" alt="logo-whatsapp" class="logo-redes"></a>
-            </li>
-        </ul>
-        <h5>Copyright 2001-2022 MundoPesca todos los derechos reservados.</h5>
+        <div>
+            <ul>
+                <li>
+                    <a href="https://www.facebook.com" target="_blank"><i class="bi bi-facebook"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com" target="_blank"><i class="bi bi-instagram"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.twitter.com" target="_blank"><i class="bi bi-twitter"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.whatsapp.com" target="_blank"><i class="bi bi-whatsapp"></i></a>
+                </li>
+            </ul>
+        </div>
+        <h5>
+            <i class="bi bi-c-circle"></i> <span>2001-2022</span> <span class="copy">MundoPesca.</span>
+        </h5>
     </footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
 
 </html>
