--- a/paginas/quienes-somos.html
+++ b/paginas/quienes-somos.html
@@ -2,6 +2,8 @@
 <html lang="es">
 
 <head>
+  
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -50,22 +52,22 @@
             </div>
           </nav>
     </header>
+
     <main class="grid-quienes">
         <section class="nosotros">
-            <h2>Sobre nosotros</h2>
+            <h3>Sobre nosotros</h3>
             <p>Hace 20 años nos apasiona la idea de recibir gente con espiritu de aventura y con las ganas de pasar grandes momentos en familia y con amigos.<br>            
                 <span>MundoPesca</span> es el legado de una familia, es el equipo ideal para disfrutar desde otra visión el privilegio exclusivo para los pescadores y turistas de todo el mundo. Armonía, tranquilidad y amplitud junto a la cordialidad de
                 un equipo de trabajo idóneo que brinda lo mejor.
             </p>
-            <h2>Cubriendo todo el pais</h2>
+            <h3>Cubriendo todo el pais</h3>
             <p>Coordinando salidas a todo el territorio argentino, contando con basta experiencia tanto en agua dulce como salada. De la mano de guias con mas de 15 años de experiencia, garantizamos una experiencia unica e inolvidable.<br>
             En el mar las mejores embarcaciones con sonar de profundidad y equipos completos para pesca mayor</p>
         </section>
-
         <section class="vista">
-            <img src="../img/locaciones/concordia-arg.jpg" alt="concordia">
-            <img src="../img/locaciones/miramar-arg.jpg" alt="miramar">
-            <img src="../img/locaciones/sur-arg.jpg" alt="sur argentino">
+            <img src="../img/locaciones/concordia-arg.jpg" class="img-fluid" alt="...">
+            <img src="../img/locaciones/miramar-arg.jpg" class="img-fluid" alt="...">
+            <img src="../img/locaciones/sur-arg.jpg" class="img-fluid" alt="...">
         </section>
         <section class="ubicacion">
             <div class="ubicacion__local">
