--- a/paginas/tiendas.html
+++ b/paginas/tiendas.html
@@ -74,33 +74,33 @@
                     <div class="card" style="width: 18rem;">
                         <img src="../img/tienda/ShimanoSedonaC3000DH.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                          <h5 class="card-title">Reel Shimano Sedona</h5>
+                          <p class="card-text">Reel frontal para pesca de profundidad y variada. perfecto para cañas de a tramos o telesópica.</p>
+                          <a href="#" class="btn btn-primary">Ir a tienda</a>
                         </div>
                     </div>
                     <div class="card" style="width: 18rem;">
                         <img src="../img/tienda/FrontalShimanoSienna2500.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">Reel ShimanoSienna</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                          <h5 class="card-title">Reel Shimano Sienna</h5>
+                          <p class="card-text">Reel frontal para pesca de profundidad y variada. perfecto para cañas de a tramos.</p>
+                          <a href="#" class="btn btn-primary">Ir a tienda</a>
                         </div>
                     </div>
                     <div class="card" style="width: 18rem;">
                         <img src="../img/tienda/ReelRotativoShimanoCaius151.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                          <h5 class="card-title">Reel Rotativo Caius</h5>
+                          <p class="card-text">Reel excelente para pesca variada y mosca. con 8 rulemanes de rotacion.</p>
+                          <a href="#" class="btn btn-primary">Ir a tienda</a>
                         </div>
                     </div>
                     <div class="card" style="width: 18rem;">
                         <img src="../img/tienda/PennSlammer.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                          <h5 class="card-title">Reel Rotativo PennSlammer</h5>
+                          <p class="card-text">Reel excelente para pesca variada y mosca. con 6 rulemanes de rotacion.</p>
+                          <a href="#" class="btn btn-primary">Ir a tienda</a>
                         </div>
                     </div>
                 </div>
@@ -111,33 +111,33 @@
                     <div class="card" style="width: 18rem;">
                         <img src="../img/tienda/CañaShimanoFxs50.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                          <h5 class="card-title">Shimano Fxs50</h5>
+                          <p class="card-text">Caña dos tramos, 2.5 mts. Perfecta para reel frontal.Fibra de carbono. Pesca mayor o embarcado.</p>
+                          <a href="#" class="btn btn-primary">Ir a tienda</a>
                         </div>
                     </div>
                     <div class="card" style="width: 18rem;">
                         <img src="../img/tienda/CañaShimanoSpinningFws100.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">Reel ShimanoSienna</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                          <h5 class="card-title">Shimano Fws100</h5>
+                          <p class="card-text">Caña dos tramos, 2.2 mts. Perfecta para reel frontal.Fibra de carbono. Pesca mayor o embarcado.</p>
+                          <a href="#" class="btn btn-primary">Ir a tienda</a>
                         </div>
                     </div>
                     <div class="card" style="width: 18rem;">
                         <img src="../img/tienda/CañaBaitcastF150pro.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                          <h5 class="card-title">Baitcast F150 pro</h5>
+                          <p class="card-text">Caña de un tramo, 1.8 mts. Perfecta para la pesca variada, reel rotativo. Pesca con mosca.</p>
+                          <a href="#" class="btn btn-primary">Ir a tienda</a>
                         </div>
                     </div>
                     <div class="card" style="width: 18rem;">
                         <img src="../img/tienda/cañaFeederPeje.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                          <h5 class="card-title">Feeder Peje PJ500</h5>
+                          <p class="card-text">Caña 4 tramos, 2 mts. Flexible, perfecta para pesca de Pejerrey. Rinde con variead de reel</p>
+                          <a href="#" class="btn btn-primary">Ir a tienda</a>
                         </div>
                     </div>
                 </div>
@@ -150,7 +150,7 @@
                         <div class="card-body">
                           <h5 class="card-title">Card title</h5>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                          <a href="#" class="btn btn-primary">Ir a tienda</a>
                         </div>
                     </div>
                     <div class="card" style="width: 18rem;">
@@ -158,7 +158,7 @@
                         <div class="card-body">
                           <h5 class="card-title">Reel ShimanoSienna</h5>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                          <a href="#" class="btn btn-primary">Ir a tienda</a>
                         </div>
                     </div>
                     <div class="card" style="width: 18rem;">
@@ -166,15 +166,15 @@
                         <div class="card-body">
                           <h5 class="card-title">Card title</h5>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                          <a href="#" class="btn btn-primary">Ir a tienda</a>
                         </div>
-                    </div>
+                    </div>  
                     <div class="card" style="width: 18rem;">
                         <img src="../img/tienda/conjuntoFinsinpleeOtoñoPrimavera.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Card title</h5>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                          <a href="#" class="btn btn-primary">Ir a tienda</a>
                         </div>
                     </div>
                 </div>
