encabezado y detalles grid

--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     <link rel="stylesheet" href="./style.css/flex-estilo.css">
     <title>MundoPesca</title>
 </head>
+
 <body>
     <header>
         <div class="cabecera">
-            <img src="./img/logos/logo-pagina.jpg" alt="logo-mundopesca">
+            <div class="logo"><img src="./img/logos/logo-pagina.jpg" alt="logo-mundopesca"></div>
             <div class="tituloMarea">
                 <h1 class="tituloA">MundoPesca</h1>
                 <h1 class="tituloB">MundoPesca</h1>
@@ -98,6 +99,7 @@
             </div>
         </section>
     </main>
+
     <footer>
         <div>
             <ul>
