--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -17,11 +17,11 @@
 <body>
     <header>
         <div class="cabecera">
-            <img src="../img/logos/logo-pagina.jpg" alt="logo-mundopesca">
+            <div class="logo"><img src="../img/logos/logo-pagina.jpg" alt="logo-mundopesca"></div>
             <div class="tituloMarea">
                 <h1 class="tituloA">MundoPesca</h1>
                 <h1 class="tituloB">MundoPesca</h1>
-            </div>
+          </div>
         </div>
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid">
@@ -61,26 +61,26 @@
             <h6>Telefono..... 0223 6557173</h6>
         </section>
         <section class="comentarios">
-            <h3>Dejanos tus comantarios</h3>
+            <h4>Dejanos tus comantarios</h4>
             <div class="comentarios__form">
                 <form>
-                    <div class="input-group mb-3">
+                    <div class="input-group mb-2 ">
                         <span class="input-group-text" id="basic-addon1">Nombre</span>
                         <input type="text" class="form-control" aria-label="Nombre" aria-describedby="basic-addon1">
                       </div>
-                      <div class="input-group mb-3">
+                      <div class="input-group mb-2">
                         <span class="input-group-text" id="basic-addon1">Apellido</span>
                         <input type="text" class="form-control" aria-label="Apellido" aria-describedby="basic-addon1">
                       </div>
-                      <div class="input-group mb-3">
+                      <div class="input-group mb-2">
                         <span class="input-group-text" id="basic-addon1">Telefono</span>
                         <input type="text" class="form-control" aria-label="Telefono" aria-describedby="basic-addon1">
                       </div>
-                      <div class="input-group mb-3">
+                      <div class="input-group mb-2">
                         <span class="input-group-text">Tu comentario</span>
                         <textarea class="form-control" aria-label="With textarea"></textarea>
                       </div>
-                      <div class="input-group mb-3">
+                      <div class="input-group mb-2">
                         <button class="btn btn-primary" type="submit">Enviar</button>
                     </div>
                 </form>
