--- a/paginas/excursiones.html
+++ b/paginas/excursiones.html
@@ -17,9 +17,7 @@
 <body>
     <header>
         <div class="cabecera">
-            <div>
-                <img src="../img/logos/logo-pagina.jpg" alt="logo-mundopesca">
-            </div>
+            <div class="logo"><img src="../img/logos/logo-pagina.jpg" alt="logo-mundopesca"></div>
             <div class="tituloMarea">
                 <h1 class="tituloA">MundoPesca</h1>
                 <h1 class="tituloB">MundoPesca</h1>
@@ -52,9 +50,10 @@
             </div>
           </nav>
     </header>
+
     <main >
         <div class="locaciones">
-            <h2>Elegi el destino de nuestras proximas salidas:</h2>
+            <h4>Elegi el destino de nuestras proximas salidas:</h4>
             <ul>
                 <li>
                     <a href="#goya">Goya, Corrientes</a>
@@ -69,39 +68,41 @@
         </div>
         <section>
             <div class="galeria-locaciones">
-                <h3 id="goya">Ciudad de Goya</h3>
+                <h4 id="goya">Ciudad de Goya</h4>
                 <div class="fotos-locaciones">
-                    <div class="goya1"><img src="../img/locaciones/goya/goya-1.jpg" alt="Goya"></div>
-                    <div class="goya2"><img src="../img/locaciones/goya/goya-3.jpg" alt="Goya"></div>
-                    <div class="goya3"><img src="../img/locaciones/goya/goya-2.jpg" alt="Goya"></div>
-                    <div class="goya4"><img src="../img/locaciones/goya/goya-4.jpg" alt="Goya"></div>
-                    <div class="goya5"><img src="../img/locaciones/goya/goya-5.jpg" alt="Goya"></div>
+                    <img src="../img/locaciones/goya/goya-1.jpg" alt="Goya">
+                    <img src="../img/locaciones/goya/goya-3.jpg" alt="Goya">
+                    <img src="../img/locaciones/goya/goya-2.jpg" alt="Goya">
+                    <img src="../img/locaciones/goya/goya-4.jpg" alt="Goya">
+                    <img src="../img/locaciones/goya/goya-5.jpg" alt="Goya">
+                    <img src="../img/locaciones/goya/goya-6.jpg" alt="Goya">
                 </div>
-                <h4>Conoce mas en <a href="https://www.goya.gob.ar" target="_blank">Goya</a></h4>
+                <h6>Conoce mas en <a href="https://www.goya.gob.ar" target="_blank">Goya</a></h6>
             </div>
             <div class="galeria-locaciones">
-                <h3 id="paso">Paso de la Patria, Corrientes</h3>
+                <h4 id="paso">Paso de la Patria, Corrientes</h4>
                 <div class="fotos-locaciones">
-                    <div class="paso1"><img src="../img/locaciones/pasodelapatria/pasodelapatria-1.jpg" alt="Paso de la Patria"></div>
-                    <div class="paso2"><img src="../img/locaciones/pasodelapatria/pasodelapatria-2.jpg" alt="Paso de la Patria"></div>
-                    <div class="paso3"><img src="../img/locaciones/pasodelapatria/pasodelapatria-3.jpg" alt="Paso de la Patria"></div>
-                    <div class="paso4"><img src="../img/locaciones/pasodelapatria/pasodelapatria-4.jpg" alt="Paso de la Patria"></div>
-                    <div class="paso5"><img src="../img/locaciones/pasodelapatria/pasodelapatria-5.jpg" alt="Paso de la Patria"></div>
-                    <div class="paso6"><img src="../img/locaciones/pasodelapatria/pasodelapatria-6.jpg" alt="Paso de la Patria"></div>
+                    <img src="../img/locaciones/pasodelapatria/pasodelapatria-1.jpg" alt="Paso de la Patria">
+                    <img src="../img/locaciones/pasodelapatria/pasodelapatria-7.jpg" alt="Paso de la Patria">
+                    <img src="../img/locaciones/pasodelapatria/pasodelapatria-3.jpg" alt="Paso de la Patria">
+                    <img src="../img/locaciones/pasodelapatria/pasodelapatria-4.jpg" alt="Paso de la Patria">
+                    <img src="../img/locaciones/pasodelapatria/pasodelapatria-5.jpg" alt="Paso de la Patria">
+                    <img src="../img/locaciones/pasodelapatria/pasodelapatria-6.jpg" alt="Paso de la Patria">
                 </div>
-                <h4>Conoce mas en <a href="https://www.pasodelapatria.gob.ar" target="_blank">Paso de la Patria</a></h4>
+                <h6>Conoce mas en <a href="https://www.pasodelapatria.gob.ar" target="_blank">Paso de la Patria</a></h6>
             </div>
             <div class="galeria-locaciones">
-                <h3 id="clemente">San Clemente, Buenos Aires</h3>
+                <h4 id="clemente">San Clemente, Buenos Aires</h4>
                 <div class="fotos-locaciones">
-                    <div class="clemente1"><img src="../img/locaciones/sanclemente/sanclemente-2.jpg" alt="Paso de la Patria"></div>
-                    <div class="clemente2"><img src="../img/locaciones/sanclemente/sanclemente-3.jpg" alt="Paso de la Patria"></div>
-                    <div class="clemente3"><img src="../img/locaciones/sanclemente/sanclemente-4.jpg" alt="Paso de la Patria"></div>
-                    <div class="clemente4"><img src="../img/locaciones/sanclemente/sanclemente-5.jpg" alt="Paso de la Patria"></div>
+                    <img src="../img/locaciones/sanclemente/sanclemente-2.jpg" alt="Paso de la Patria">
+                    <img src="../img/locaciones/sanclemente/sanclemente-3.jpg" alt="Paso de la Patria">
+                    <img src="../img/locaciones/sanclemente/sanclemente-4.jpg" alt="Paso de la Patria">
+                    <img src="../img/locaciones/sanclemente/sanclemente-5.jpg" alt="Paso de la Patria">
+                    <img src="../img/locaciones/sanclemente/sanclemente-6.jpg" alt="Paso de la Patria">
+                    <img src="../img/locaciones/sanclemente/sanclemente-7.jpg" alt="Paso de la Patria">
                 </div>
-                <h4>Conoce mas en <a href="https://www.sanclementedeltuyu.com" target="_blank">San Clemente</a></h4>
+                <h6>Conoce mas en <a href="https://www.sanclementedeltuyu.com" target="_blank">San Clemente</a></h6>
             </div>
-
         </section>
         <section class="formulario">
             <h2>Registrate</h2>
@@ -112,7 +113,6 @@
                     <input type="radio" name="destino" value="2">Paso de la Patria
                     <input type="radio" name="destino" value="3">San Clemente
                 </div>
-
                 <form class="datos-personales">
                     <input type="text" placeholder="Nombre" required>
                     <input type="text" placeholder="apellido" required>
@@ -123,6 +123,7 @@
             </div>
         </section>
     </main>
+
     <footer>
         <div>
             <ul>
@@ -144,8 +145,8 @@
             <i class="bi bi-c-circle"></i> <span>2001-2022</span> <span class="copy">MundoPesca.</span>
         </h5>
     </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>   
 </body>
-
 </html>
