--- a/paginas/quienes-somos.html
+++ b/paginas/quienes-somos.html
@@ -2,8 +2,6 @@
 <html lang="es">
 
 <head>
-  
-
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,7 +17,7 @@
 <body>
     <header>
         <div class="cabecera">
-            <img src="../img/logos/logo-pagina.jpg" alt="logo-mundopesca">
+          <div class="logo"><img src="../img/logos/logo-pagina.jpg" alt="logo-mundopesca"></div>
             <div class="tituloMarea">
                 <h1 class="tituloA">MundoPesca</h1>
                 <h1 class="tituloB">MundoPesca</h1>
@@ -50,7 +48,7 @@
                 </ul>
               </div>
             </div>
-          </nav>
+        </nav>
     </header>
 
     <main class="grid-quienes">
@@ -65,9 +63,9 @@
             En el mar las mejores embarcaciones con sonar de profundidad y equipos completos para pesca mayor</p>
         </section>
         <section class="vista">
-            <img src="../img/locaciones/concordia-arg.jpg" class="img-fluid" alt="...">
-            <img src="../img/locaciones/miramar-arg.jpg" class="img-fluid" alt="...">
-            <img src="../img/locaciones/sur-arg.jpg" class="img-fluid" alt="...">
+            <img src="../img/locaciones/concordia-arg.jpg" class="img-fluid" alt="pesca en concordia">
+            <img src="../img/locaciones/miramar-arg.jpg" class="img-fluid" alt="pesca en miramar">
+            <img src="../img/locaciones/sur-arg.jpg" class="img-fluid" alt="pesca sur argentino">
         </section>
         <section class="ubicacion">
             <div class="ubicacion__local">
@@ -78,8 +76,8 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3143.644620705346!2d-57.54430028493079!3d-38.00874895299813!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9584dc22b5794ee5%3A0xae89dbbb69b6ab0!2sAlmte.%20Brown%201724%2C%20B7600FTV%20Mar%20del%20Plata%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1655011664850!5m2!1ses!2sar"
                 style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
-
     </main>
+
     <footer>
         <div>
             <ul>
@@ -100,7 +98,8 @@
         <h5>
             <i class="bi bi-c-circle"></i> <span>2001-2022</span> <span class="copy">MundoPesca.</span>
         </h5>
-    </footer>   
+    </footer>  
+     
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
