--- a/paginas/tiendas.html
+++ b/paginas/tiendas.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <div class="cabecera">
-            <img src="../img/logos/logo-pagina.jpg" alt="logo-mundopesca">
+            <div class="logo"><img src="../img/logos/logo-pagina.jpg" alt="logo-mundopesca"></div>
             <div class="tituloMarea">
                 <h1 class="tituloA">MundoPesca</h1>
                 <h1 class="tituloB">MundoPesca</h1>
@@ -25,30 +25,32 @@
         </div>
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid">
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"    data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
+
               <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="../index.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="quienes-somos.html">Quienes somos</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Tienda</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="excursiones.html">Excursiones</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="contacto.html">Contacto</a>
-                  </li> 
-                </ul>
-              </div>
+
+                    <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="../index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="quienes-somos.html">Quienes somos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Tienda</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="excursiones.html">Excursiones</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contacto.html">Contacto</a>
+                    </li> 
+                    </ul>
+                </div>
             </div>
-          </nav>
+        </nav>
     </header>
     <main class="main-grid-tienda">
         <section class="equipo">
