hamburguesas y tienda detalles

--- a/paginas/tiendas.html
+++ b/paginas/tiendas.html
@@ -71,7 +71,7 @@
         </section>
         <section class="secciones">
             <div class="secciones__producto">
-                <h3 id="reel">REELS</h3>
+                <h4 id="reel">REELS</h4>
                 <div class="tarjetas-reel">
                     <div class="card" style="width: 18rem;">
                         <img src="../img/tienda/ShimanoSedonaC3000DH.jpg" class="card-img-top" alt="...">
@@ -108,7 +108,7 @@
                 </div>
             </div>
             <div class="secciones__producto">
-                <h3 id="reel">REELS</h3>
+                <h4 id="cañas">CAÑAS</h4>
                 <div class="tarjetas-reel">
                     <div class="card" style="width: 18rem;">
                         <img src="../img/tienda/CañaShimanoFxs50.jpg" class="card-img-top" alt="...">
@@ -145,37 +145,37 @@
                 </div>
             </div>
             <div class="secciones__producto">
-                <h3 id="reel">REELS</h3>
+                <h4 id="vestimenta">INDUMENTARIA</h4>
                 <div class="tarjetas-reel">
                     <div class="card" style="width: 18rem;">
                         <img src="../img/tienda/conjuntoMosca.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <h5 class="card-title">Conjunto Mosca</h5>
+                          <p class="card-text">Conjunto de invierno, cierre impermeable. Capucha guardable. Codos y hombros preformados.</p>
                           <a href="#" class="btn btn-primary">Ir a tienda</a>
                         </div>
                     </div>
                     <div class="card" style="width: 18rem;">
                         <img src="../img/tienda/camisetaNegraLurestar-ml.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">Reel ShimanoSienna</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <h5 class="card-title">Remera Lurestar</h5>
+                          <p class="card-text">Secado rápido. Alta proteccion UV. Antienganches. No se reduce con lavado, ani-arrugas.</p>
                           <a href="#" class="btn btn-primary">Ir a tienda</a>
                         </div>
                     </div>
                     <div class="card" style="width: 18rem;">
                         <img src="../img/tienda/conjuntoFinsinpleeOtoñoPrimavera.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <h5 class="card-title">Conjunto Mosca 2</h5>
+                          <p class="card-text">Conjunto de invierno, reversible. Capucha guardable. Puños con presillas elásticas.</p>
                           <a href="#" class="btn btn-primary">Ir a tienda</a>
                         </div>
                     </div>  
                     <div class="card" style="width: 18rem;">
-                        <img src="../img/tienda/conjuntoFinsinpleeOtoñoPrimavera.jpg" class="card-img-top" alt="...">
+                        <img src="../img/tienda/chalecos.jpg" class="card-img-top" alt="chalecos pesca">
                         <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <h5 class="card-title">Chaleco SwordFish</h5>
+                          <p class="card-text">Multiples bolsillos internos. Costuras reforzadas, interior con mesh. parche para moscas.</p>
                           <a href="#" class="btn btn-primary">Ir a tienda</a>
                         </div>
                     </div>
