--- a/index.html
+++ b/index.html
@@ -80,8 +80,7 @@
                 </p>
             </div>
             <div class="normas__a">
-                <a href="https://www.fao.org/3/x9066s/x9066s01.htm#:~:text=El%20C%C3%B3digo%20de%20Conducta%20insiste,recursos%20%C3%ADcticos%20y%20su%20h%C3%A1bitat." target="_blank" >Ley FAO
-                </a>
+                <a href="https://www.fao.org/3/x9066s/x9066s01.htm#:~:text=El%20C%C3%B3digo%20de%20Conducta%20insiste,recursos%20%C3%ADcticos%20y%20su%20h%C3%A1bitat." target="_blank" >Ley FAO</a>
             </div>
         </section>
         <section class="permisos">
