sass a excursiones y contacto

--- a/paginas/tiendas.html
+++ b/paginas/tiendas.html
@@ -111,7 +111,7 @@
                 <h4 id="cañas">CAÑAS</h4>
                 <div class="tarjetas-reel">
                     <div class="card" style="width: 18rem;">
-                        <img src="../img/tienda/CañaShimanoFxs50.jpg" class="card-img-top" alt="...">
+                        <img src="../img/tienda/CaniaShimanoFxs50.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Shimano Fxs50</h5>
                           <p class="card-text">Caña dos tramos, 2.5 mts. Perfecta para reel frontal.Fibra de carbono. Pesca mayor o embarcado.</p>
@@ -119,7 +119,7 @@
                         </div>
                     </div>
                     <div class="card" style="width: 18rem;">
-                        <img src="../img/tienda/CañaShimanoSpinningFws100.jpg" class="card-img-top" alt="...">
+                        <img src="../img/tienda/CaniaShimanoSpinningFws100.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Shimano Fws100</h5>
                           <p class="card-text">Caña dos tramos, 2.2 mts. Perfecta para reel frontal.Fibra de carbono. Pesca mayor o embarcado.</p>
@@ -127,7 +127,7 @@
                         </div>
                     </div>
                     <div class="card" style="width: 18rem;">
-                        <img src="../img/tienda/CañaBaitcastF150pro.jpg" class="card-img-top" alt="...">
+                        <img src="../img/tienda/CaniaBaitcastF150pro.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Baitcast F150 pro</h5>
                           <p class="card-text">Caña de un tramo, 1.8 mts. Perfecta para la pesca variada, reel rotativo. Pesca con mosca.</p>
@@ -135,7 +135,7 @@
                         </div>
                     </div>
                     <div class="card" style="width: 18rem;">
-                        <img src="../img/tienda/cañaFeederPeje.jpg" class="card-img-top" alt="...">
+                        <img src="../img/tienda/caniaFeederPeje.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Feeder Peje PJ500</h5>
                           <p class="card-text">Caña 4 tramos, 2 mts. Flexible, perfecta para pesca de Pejerrey. Rinde con variead de reel</p>
@@ -164,7 +164,7 @@
                         </div>
                     </div>
                     <div class="card" style="width: 18rem;">
-                        <img src="../img/tienda/conjuntoFinsinpleeOtoñoPrimavera.jpg" class="card-img-top" alt="...">
+                        <img src="../img/tienda/conjuntoFinsinpleeOtonoPrimavera.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Conjunto Mosca 2</h5>
                           <p class="card-text">Conjunto de invierno, reversible. Capucha guardable. Puños con presillas elásticas.</p>
