--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Pirata+One&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="../style.css/flex-estilo.css">
+    <link rel="stylesheet" href="../css/main.css">
     <title>MundoPesca</title>
 </head>
 
@@ -63,24 +63,24 @@
         <section class="comentarios">
             <h4>Dejanos tus comantarios</h4>
             <div class="comentarios__form">
-                <form>
-                    <div class="input-group mb-2 ">
+                <form class="formulario__datos">
+                    <div class="input-group ">
                         <span class="input-group-text" id="basic-addon1">Nombre</span>
                         <input type="text" class="form-control" aria-label="Nombre" aria-describedby="basic-addon1">
                       </div>
-                      <div class="input-group mb-2">
+                      <div class="input-group">
                         <span class="input-group-text" id="basic-addon1">Apellido</span>
                         <input type="text" class="form-control" aria-label="Apellido" aria-describedby="basic-addon1">
                       </div>
-                      <div class="input-group mb-2">
+                      <div class="input-group">
                         <span class="input-group-text" id="basic-addon1">Telefono</span>
                         <input type="text" class="form-control" aria-label="Telefono" aria-describedby="basic-addon1">
                       </div>
-                      <div class="input-group mb-2">
-                        <span class="input-group-text">Tu comentario</span>
+                      <div class="input-group">
+                        <span class="input-group-text">Mensaje</span>
                         <textarea class="form-control" aria-label="With textarea"></textarea>
                       </div>
-                      <div class="input-group mb-2">
+                      <div class="input-group">
                         <button class="btn btn-primary" type="submit">Enviar</button>
                     </div>
                 </form>
@@ -88,24 +88,24 @@
         </section>
     </main>
 
-    <footer>
-        <div>
-            <ul>
-                <li>
+    <footer class="footer">
+        <div class="footer__iconos">
+            <ul class="footer__iconos__lista">
+                <li class="footer__iconos__lista__listado">
                     <a href="https://www.facebook.com" target="_blank"><i class="bi bi-facebook"></i></a>
                 </li>
-                <li>
+                <li class="footer__iconos__lista__listado">
                     <a href="https://www.instagram.com" target="_blank"><i class="bi bi-instagram"></i></a>
                 </li>
-                <li>
+                <li class="footer__iconos__lista__listado">
                     <a href="https://www.twitter.com" target="_blank"><i class="bi bi-twitter"></i></a>
                 </li>
-                <li>
+                <li class="footer__iconos__lista__listado">
                     <a href="https://www.whatsapp.com" target="_blank"><i class="bi bi-whatsapp"></i></a>
                 </li>
             </ul>
         </div>
-        <h5>
+        <h5 class="footer__copyright">
             <i class="bi bi-c-circle"></i> <span>2001-2022</span> <span class="copy">MundoPesca.</span>
         </h5>
     </footer>   
