--- a/paginas/excursiones.html
+++ b/paginas/excursiones.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Pirata+One&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="../style.css/flex-estilo.css">
+    <link rel="stylesheet" href="../css/main.css">
     <title>Excursiones</title>
 </head>
 
@@ -69,7 +69,7 @@
         <section>
             <div class="galeria-locaciones">
                 <h4 id="goya">Ciudad de Goya</h4>
-                <div class="fotos-locaciones">
+                <div class="galeria-locaciones__fotos">
                     <img src="../img/locaciones/goya/goya-1.jpg" alt="Goya">
                     <img src="../img/locaciones/goya/goya-3.jpg" alt="Goya">
                     <img src="../img/locaciones/goya/goya-2.jpg" alt="Goya">
@@ -81,7 +81,7 @@
             </div>
             <div class="galeria-locaciones">
                 <h4 id="paso">Paso de la Patria, Corrientes</h4>
-                <div class="fotos-locaciones">
+                <div class="galeria-locaciones__fotos">
                     <img src="../img/locaciones/pasodelapatria/pasodelapatria-1.jpg" alt="Paso de la Patria">
                     <img src="../img/locaciones/pasodelapatria/pasodelapatria-7.jpg" alt="Paso de la Patria">
                     <img src="../img/locaciones/pasodelapatria/pasodelapatria-3.jpg" alt="Paso de la Patria">
@@ -93,7 +93,7 @@
             </div>
             <div class="galeria-locaciones">
                 <h4 id="clemente">San Clemente, Buenos Aires</h4>
-                <div class="fotos-locaciones">
+                <div class="galeria-locaciones__fotos">
                     <img src="../img/locaciones/sanclemente/sanclemente-2.jpg" alt="Paso de la Patria">
                     <img src="../img/locaciones/sanclemente/sanclemente-3.jpg" alt="Paso de la Patria">
                     <img src="../img/locaciones/sanclemente/sanclemente-4.jpg" alt="Paso de la Patria">
@@ -106,7 +106,35 @@
         </section>
         <section class="formulario">
             <h2>Registrate</h2>
-            <h3>Escoge tu destino:</h3>
+            <select class="form-select" aria-label="Default select example">
+                <option selected>Elige tu destino</option>
+                <option value="1">Goya</option>
+                <option value="2">Paso de la Patria</option>
+                <option value="3">San Clemente</option>
+            </select>
+            <form class="formulario__datos">
+                <div class="input-group">
+                    <span class="input-group-text" id="basic-addon1">Nombre</span>
+                    <input type="text" class="form-control" aria-label="Nombre" aria-describedby="basic-addon1">
+                  </div>
+                  <div class="input-group">
+                    <span class="input-group-text" id="basic-addon1">Apellido</span>
+                    <input type="text" class="form-control" aria-label="Apellido" aria-describedby="basic-addon1">
+                  </div>
+                  <div class="input-group">
+                    <span class="input-group-text" id="basic-addon1">Telefono</span>
+                    <input type="text" class="form-control" aria-label="Telefono" aria-describedby="basic-addon1">
+                  </div>
+                  <div class="input-group">
+                    <span class="input-group-text" id="basic-addon1">E-mail</span>
+                    <input type="email" class="form-control" aria-label="Email" aria-describedby="basic-addon1">
+                  </div>
+                  <div class="input-group">
+                    <button class="btn btn-primary" type="submit">Enviar</button>
+                </div>
+            </form>
+        </section>    
+            <!--
             <div class="formulario__datos">
                 <div class="selec-destino">
                     <input type="radio" name="destino" value="1">Goya
@@ -121,27 +149,28 @@
                     <input type="submit">
                 </form>
             </div>
-        </section>
+            -->
+
     </main>
 
-    <footer>
-        <div>
-            <ul>
-                <li>
+    <footer class="footer">
+        <div class="footer__iconos">
+            <ul class="footer__iconos__lista">
+                <li class="footer__iconos__lista__listado">
                     <a href="https://www.facebook.com" target="_blank"><i class="bi bi-facebook"></i></a>
                 </li>
-                <li>
+                <li class="footer__iconos__lista__listado">
                     <a href="https://www.instagram.com" target="_blank"><i class="bi bi-instagram"></i></a>
                 </li>
-                <li>
+                <li class="footer__iconos__lista__listado">
                     <a href="https://www.twitter.com" target="_blank"><i class="bi bi-twitter"></i></a>
                 </li>
-                <li>
+                <li class="footer__iconos__lista__listado">
                     <a href="https://www.whatsapp.com" target="_blank"><i class="bi bi-whatsapp"></i></a>
                 </li>
             </ul>
         </div>
-        <h5>
+        <h5 class="footer__copyright">
             <i class="bi bi-c-circle"></i> <span>2001-2022</span> <span class="copy">MundoPesca.</span>
         </h5>
     </footer>
