--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="pesca,peces,pescado,caña,salida de pesca,reel,anzuelo,carnada,mosca,embarcado,excursion,mundopesca,dorado,surubi,pejerrey,caña,costa,">
+    <meta name="description" content="Mas de 20 años de trayectoria nos avalan. Sea en río o en mar, garantizamos la mejor experiencia. Porque es eso, una experiencia unica e inigualable.Servicios de guía, traslado y equipos. de costa o embarcado.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pirata+One&display=swap" rel="stylesheet">
