--- a/paginas/excursiones.html
+++ b/paginas/excursiones.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="keywords" content="pesca,peces,pescado,caña,salida de pesca,reel,anzuelo,carnada,mosca,embarcado,excursion,mundopesca,caña,costa,excursiones,turno,fechas,cronograma">
+    <meta name="description" content="Solicita un lugar en nuestra proxima salida.Mas de 20 años de trayectoria nos avalan. Sea en río o en mar, garantizamos la mejor experiencia. Porque es eso, una experiencia unica e inigualable.Servicios de guía, traslado y equipos. de costa o embarcado.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,7 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../css/main.css">
-    <title>Excursiones</title>
+    <title>MundoPesca/Excursiones</title>
 </head>
 
 <body>
