--- a/paginas/tiendas.html
+++ b/paginas/tiendas.html
@@ -5,13 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="pesca,peces,pescado,caña,salida de pesca,reel,anzuelo,carnada,mosca,embarcado,mundopesca,caña,costa,tienda, local,comprar,articulos,equipamiento">
+    <meta name="description" content="Conoce nuestra tienda.Mas de 20 años de trayectoria nos avalan. Sea en río o en mar, garantizamos la mejor experiencia. Porque es eso, una experiencia unica e inigualable.Servicios de guía, traslado y equipos. de costa o embarcado.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pirata+One&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../css/main.css">
-    <title>MundoPesca</title>
+    <title>MundoPesca/tienda</title>
 </head>
 
 <body>
