boton de inicio

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <header>
+    <header id="cabeza-pagina">
         <div class="cabecera">
             <div class="logo"><img src="./img/logos/logo-pagina.jpg" alt="logo-mundopesca"></div>
             <div class="tituloMarea">
@@ -120,6 +120,7 @@
                 </li>
             </ul>
         </div>
+        <div class="footer__volver"><a href="#cabeza-pagina">Inicio</a></div>
         <h5 class="footer__copyright">
             <i class="bi bi-c-circle"></i> <span>2001-2022</span> <span class="copy">MundoPesca.</span>
         </h5>
